--- a/variables.env
+++ b/variables.env
@@ -1,6 +1,9 @@
-DB_URL = mongodb+srv://dbDaniel:da6al9se3ri7@cluster0.jrryc.mongodb.net/reactsend
+DB_URL =mongodb+srv://dbDaniel:da6al9se3ri7@cluster0.jrryc.mongodb.net/PWEELDB
 FRONTEND_URL = http://localhost:3000
 
+CLUSTER_USER      = dbDaniel
+CLUSTER_PASSWORD  = da6al9se3ri7
+CLUSTER_DATA_BASE = PWEELDB
 
 CLOUDINARY_CLOUD_NAME = danielserrano
 CLOUDINARY_API_KEY = 926699316537466
